--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.2.1",
     "cloudinary": "^2.5.1",
     "framer-motion": "^11.16.3",
+    "lucide-react": "^0.474.0",
     "next": "15.1.3",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
